get back code coverage report