@@ -125,7 +125,7 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>2.5.4</version>
+        <version>3.5.0</version>
         <executions>
           <execution>
             <id>bundle-manifest</id>
@@ -182,6 +182,14 @@
     </dependency>
 
     <dependency>
+      <groupId>org.jacoco</groupId>
+      <artifactId>org.jacoco.agent</artifactId>
+      <version>${jacoco.version}</version>
+      <classifier>runtime</classifier>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
@@ -223,4 +231,65 @@
   <properties>
     <antlr-version>4.7.1</antlr-version>
   </properties>
+
+  <profiles>
+    <profile>
+      <id>coverage</id>
+      <build>
+        <plugins>
+          <!-- sure-fire -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <includes>
+                <include>**/*Test.java</include>
+                <include>**/*Hbs.java</include>
+                <include>**/*Issue*.java</include>
+              </includes>
+              <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+              <systemPropertyVariables>
+                <!-- JaCoCo runtime must know where to dump coverage: -->
+                <jacoco-agent.destfile>target${file.separator}jacoco.exec</jacoco-agent.destfile>
+              </systemPropertyVariables>
+            </configuration>
+          </plugin>
+
+          <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>${jacoco.version}</version>
+            <configuration>
+              <excludes>
+                <exclude>**/Hbs*</exclude>
+              </excludes>
+            </configuration>
+            <executions>
+              <execution>
+                <id>instrument</id>
+                <phase>process-classes</phase>
+                <goals>
+                  <goal>instrument</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>restore</id>
+                <phase>prepare-package</phase>
+                <goals>
+                  <goal>restore-instrumented-classes</goal>
+                  <goal>report</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <!-- coveralls -->
+          <plugin>
+            <groupId>org.eluder.coveralls</groupId>
+            <artifactId>coveralls-maven-plugin</artifactId>
+            <version>4.3.0</version>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
